<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Acceuil" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header" >
        
    </LinearLayout>

   <LinearLayout
        android:id="@+id/LinearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

       <LinearLayout
           android:layout_width="76dp"
           android:layout_height="wrap_content"
           android:layout_marginRight="30dp"
           android:gravity="center_vertical|fill_horizontal"
           android:orientation="vertical"
           android:paddingLeft="0dp" >

           <Button
               android:id="@+id/button3"
               android:layout_width="60dp"
               android:layout_height="43dp"
               android:layout_marginLeft="20dp"
               android:layout_weight="0.33"
               android:autoLink="web"
               android:background="@drawable/acc"
               android:drawablePadding="0dp"
               android:gravity="bottom|center"
               android:height="70dp"
               android:onClick="onClickacc"
               android:padding="0dp"
               android:scrollbarAlwaysDrawVerticalTrack="true"
               android:textSize="15sp"
               android:textStyle="normal"
               android:typeface="sans"
               android:width="80dp" />

           <TextView
               android:id="@+id/nom"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingLeft="5dp"
               android:text="@string/Accueil"
               android:textColor="@color/col8"
               android:textStyle="bold" />
       </LinearLayout>

        <LinearLayout
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|fill_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button2"
                android:layout_width="58dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:background="@drawable/off"
                android:onClick="onClickoffre"
                android:padding="0dp"
                android:paddingTop="0dp"
                android:textSize="15sp"
                android:textStyle="normal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/date_panier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="9dp"
                android:text="@string/Offres"
                android:textColor="@color/col8"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|fill_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="0dp"
                android:background="@drawable/auth"
                android:onClick="onClicauth" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:gravity="right"
                android:scrollHorizontally="false"
                android:text="@string/EE"
                android:textColor="@color/col8"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
     <ListView
         android:id="@+id/listviewperso"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" >

    </ListView>

</LinearLayout>
